fix leaf broken loc

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5478,29 +5478,12 @@ ROM_deal_with_the_liberal_king_desc:0 "The last man that can threaten our power 
 deal_with_lib_king.tt:0 "Gets event '§YThe Carp Constitution§!'\nDisables the decision category §Y'The Kings Country§!' and all relating decisions and events. The king will no longer be able to §Rdismiss§! our government, and his opinion of us will no longer effect our §YPolitical Power§! or §YStability§!"
 ROM_consolidate_the_dictatorship:0 "Take the Mask Off"
 ROM_guide_parliament:0 "Intra-Party Democracy"
-ROM_consolidate_the_dictatorship_desc:0 ""
-ROM_the_national_ideal:0 "The National Ideal"
-ROM_the_national_ideal_desc:0 "The National Ideal is an editorial that Carp published, speaking of how Romania's survival was uncertain as long as Russia bordered the Danube Delta, and pushes for the reclamation of Bessarabia from Russia, and that we must seek greater cooperation with the Central Powers. "
-ROM_anti_russian_focus:0 "Promote Anti-Russian Propaganda"
-ROM_anti_russian_focus_desc:0 ""
-ROM_anti_russian_propaganda_idea:0 "Anti-Russian Propaganda"
-ROM_end_cultural_intolerance:0 "End Cultural Intolerance"
-ROM_end_cultural_intolerance_desc:0 ""
-ROM_cooperation_with_germany:0 "Cooperation with Germany"
-ROM_cooperation_with_germany_desc:0 ""
-ROM_suppress_moldavian_socialist_clubs:0 "Suppress Moldavian Socialist Clubs"
-ROM_suppress_moldavian_socialist_clubs_desc:0 "Recently in Moldavia, clubs supporting the ideas of socialism have been gaining popularity. These ideas are dangerous to the nation, and are a social disease that must be crushed."
-ROM_moldavian_socialist_clubs_rising:0 "Moldavian Socialist Clubs Gaining Traction"
-ROM_moldavian_socialist_clubs_rising_desc:0 "Recently in Moldavia, socialist clubs have been gaining growing traction among the people there. Many are participating in these clubs, spreading the ideas of socialism everywhere they can."
-ROM_national_unity_idea:0 "National Unity"
-ROM_reclamation_of_bessarabia:0 "Liberation of Bessarabia"
 
 #custom tooltips
 ROM_the_kings_government:0 "The King's Favorites"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
 ROM_romanian_army_idea:0 "Romanian Army"
 modify_rom_army_sup:0 "Modify §YRomanian Army§! by\nSupply Consumption: §G-10.00%§!"
-
 modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experience Gain: §G+0.03§!\n\n"
 ROM_army_org:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n"
 ROM_rthc:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n"
@@ -5513,7 +5496,7 @@ ROM_german_industrial_aid2:0 "German Arms Embargo"
 ROM_adapt_to_times.tt:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Divisions Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
 ww1_romania.42.t:0 "Germany Demands Military Access"
 ww1_romania.42.d:0 "Germany has sent a message informing us that they will stop selling weapons to us if we do not allow German supplies and troops to flow through Romanian territory, defacto demanding we give them permission to send divisions through our land. While it would compromise our neutrality significantly, we may be too dependent on Germany to say no. How should we reply?"
-ww1_romania.42.a "Lets not anger them..."
+ww1_romania.42.a:0 "Lets not anger them..."
 ww1_romania.42.b:0 "We will find markets elsewhere, then"
 ROM_ttyg:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n\n"
 
