revert goud loc

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5302,7 +5302,7 @@ pcd_leader:0 "Member of the §mPCD§!"
 pcd_member:0 "Member of the §mPCD§!"
 pcd_leader2:0 "Member of the §mPCD§!"
 ROM_ferd_king:0 "§YFerdinand I§! is King of Romania"
-ROM_a_voice_of_reason:0 "The Voice of Reason"
+ROM_a_voice_of_reason:0 "A Voice of Reason"
 ROM_a_voice_of_reason_desc:0 ""
 ROM_a_useful_ally:0 "A Useful Ally"
 ROM_a_useful_ally_desc:0 ""
@@ -5311,7 +5311,7 @@ ROM_democratic_coalition:0 "Democratic Coalition"
 ROM_democratic_coalition_desc:0 ""
 ROM_the_moderating_influence:0 "The Moderating Influence"
 ROM_the_moderating_influence_desc:0 ""
-ROM_the_new_constitution:0 "PNL Hostile Takeover"
+ROM_the_new_constitution:0 "Hostile Takeover of the PNL"
 ROM_the_new_constitution_desc:0 ""
 ROM_a_unifying_figure_head:0 "A Unifying Figurehead"
 ROM_a_unifying_figure_head_desc:0 ""
@@ -5439,7 +5439,7 @@ ROM_disband_the_parliament:0 "Ban the PNL & PCD"
 ROM_disband_the_parliament_desc:0 ""
 ROM_the_peoples_dictator:0 "The People's Dictator"
 ROM_the_peoples_dictator_desc:0 ""
-ROM_get_party_in_line:0 "The Party Line"
+ROM_get_party_in_line:0 "Get the Party in Line"
 ROM_get_party_in_line_desc:0 ""
 ROM_the_carpist_renaissance:0 "The Carpist Renaissance"
 ROM_the_carpist_renaissance_desc:0 ""
