--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -1414,8 +1414,8 @@
  TMS_ADJ:0 "Туркменск"
  UAE_fascism:1 "Договорные Шейхства"
  UAE_fascism_DEF:1 "Договорные Шейхства"
- UAE_neutrality:0 "Договорной Оман"
- UAE_neutrality_DEF:0 "Договорной Оман"
+ UAE_neutrality:0 "Договорный Оман"
+ UAE_neutrality_DEF:0 "Договорный Оман"
  UAE_communism:1 "Народный Арабский Союз"
  UAE_communism_DEF:1 "Народный Арабский Союз"
  UAE_communism_ADJ:1 "Арабск"
