--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -73,7 +73,7 @@
  national_syndicalism:0 "Национал-синдикализм"
  national_syndicalism_desc:0 "Национал-синдикализм - это идеология, сочетающая интегральный национализм с синдикализмом."
  ittihadism:0 "Иттихадизм"
- ittihadism_desc:0 "Иттихадизм - это идеология, характеризующаяся национализмом и верой в передовые технологии как источник национальной мощи. Она сопровождается социальным дарвинизмом и научным расизмом, а также пропагандой социальной модернизации и вестернизации. Иттихадисты были вдохновлены французским ученым Гюставом Лебоном и немецким генералом бароном Кольмаром фон дер Гольцем, которые пропагандировали правление научной элиты и милитаризм. Османская империя рассматривается как лидер всех мусульман, возглавляемых "турецкой расой"."
+ ittihadism_desc:0 "Иттихадизм - это идеология, характеризующаяся национализмом и верой в передовые технологии как источник национальной мощи. Она сопровождается социальным дарвинизмом и научным расизмом, а также пропагандой социальной модернизации и вестернизации. Иттихадисты были вдохновлены французским ученым Гюставом Лебоном и немецким генералом бароном Кольмаром фон дер Гольцем, которые пропагандировали правление научной элиты и милитаризм. Османская Империя рассматривается как лидер всех мусульман, возглавляемых «турецкой расой»."
  revolutionary_nationalism:0 "Революционный национализм"
  revolutionary_nationalism_desc:0 "Революционный национализм, также известный как радикальный национализм, - это идеологическая теория, которая призывает к созданию национального сообщества, объединенного общим чувством цели и предназначения."
  
