--- a/localisation/russian/ww1_characters_l_russian.yml
+++ b/localisation/russian/ww1_characters_l_russian.yml
@@ -1496,7 +1496,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  GRE_petros_protopapadakis:0 "Pétros Protopapadákis"
  GRE_stefanos_dragoumis:0 "Stéphanos Dragoúmis"
  GRE_stefanos_dragoumis_desc:0 "Ветеран юридической и политической мысли, Стефанос Драгумис уже давно участвует в политической жизни Греции. Впервые избранный членом парламента в 1879 году от провинции Мегара, Драгумис всегда баллотировался либо как независимый кандидат, либо под реформистской платформой покойного Харилаоса Трикуписа. Он приобрел известность как один из главных организаторов Македонской борьбы, вместе со своим сыном Ионом Драгумисом и зятем Павлосом Меласом. Драгумис был одним из основателей так называемой "Японской группы" - политического альянса, который в 1906-1908 годах стал известен своей боевитостью в парламенте. Теперь стареющего политика призвали стать премьер-министром временного правительства после отставки Мавромихалиса, а Военная лига, ответственная за переворот Гуди в 1909 году, согласилась распуститься с его назначением. Теперь Драгумис должен определить дальнейший курс развития Эллады, поскольку он стоит перед конституционным перепутьем, вынужденный выбирать между предпочтением либералов и роялистов."
- GRE_dimitrios_gounaris_desc:0 "A charismatic lawyer and skilled orator, Dimitrios Gounaris has been appointed by the King to reshape the Hellenic political scene. A well educated man, Gounaris pursued higher education in Germany, France, and England before returning to Hellas and getting invloved with politics. A Royalist at his core, he originally rose to prominence as a member of the combative “Japanese Group”, a group that sought to emulate the ferocity of Japanese soldiers during the recent Russo-Japanese War. It is well known that the new Prime Minister is an admirer of Otto von Bismarck’s policies during his tenure as Chancellor of the German Empire. Gounaris now stands at Hellas’ helm, seeking to enact radical reforms to transform the nation into a beacon of strength, conservatism and monarchism. With such an ambitious plan in place, the Prime Minister will no doubt face significant opposition from the corrupt Old Guard and the Liberal Venizelists. Should he be successful in this struggle, no doubt he will pave the way for Heir Apparent Constantine to pursue his own absolutist agenda upon his ascension as King…"
+ GRE_dimitrios_gounaris_desc:0 "Харизматичный адвокат и искусный оратор Димитриос Гунарис был назначен королем, чтобы изменить политическую ситуацию в Элладе. Хорошо образованный человек, Гунарис получил высшее образование в Германии, Франции и Англии, после чего вернулся в Элладу и увлекся политикой. Роялист по своей сути, он первоначально стал известен как член боевой «Японской группы», группы, которая стремилась подражать свирепости японских солдат во время недавней русско-японской войны. Известно, что новый премьер-министр является поклонником политики Отто фон Бисмарка во время его пребывания на посту канцлера Германской Империи. Теперь Гунарис стоит у руля Эллады и стремится провести радикальные реформы, чтобы превратить страну в маяк силы, консерватизма и монархизма. С таким амбициозным планом премьер-министр, несомненно, столкнется с серьезной оппозицией со стороны коррумпированной старой гвардии и либеральных венизелистов. Если он добьется успеха в этой борьбе, то, несомненно, проложит путь для наследника Константина к осуществлению его собственных абсолютистских планов после восшествия на престол..."
  GRE_emmanouil_repoulis:0 "Emmanouíl Répoulis"
  GRE_mark_kerr:0 "Mark Kerr"
  GRE_george_i:0 "Geórgios I"
@@ -2991,6 +2991,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  RUS_mikhail_stakhovich:0 "Mikhail Stakhovich"
  RUS_nikolai_nekrasov:0 "Nikolai Nekrasov"
  RUS_yuri_danilov:0 "Yuri Danilov"
+ RUS_boris_vilkitsky:0 "Boris Vilkitsky"
 
  SIB_pyotr_vologodsky:0 "Pyotr Vologodsky"
  SIB_pyotr_derber:0 "Pyotr Derber"
@@ -3016,7 +3017,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  TRC_fyodor_funtikov:0 "Fyodor Funtikov"
  TRC_ippolit_savitskyy:0 "Ippolit Savitskyy"
  TRC_yakov_zhitnikov:0 "Yakov Zhitnikov"
- 
+  
  UCH_matvey_martynov:0 "Matvey Martynov"
  UCH_vladimir_akutin:0 "Vladimir Akutin"
  UCH_vladimir_volsky:0 "Vladimir Volsky"
@@ -3037,6 +3038,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  TBK_boris_rezukhin:0 "Boris Rezukhin"
  TBK_vasiliy_sokolov:0 "Vasiliy Sokolov"
  TBK_pavel_zhuravlyov:0 "Pavel Zhuravlyov"
+ 
  
  USS_ivan_kalmykov:0 "Ivan Kalmykov"
  
@@ -3065,7 +3067,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
 
  # NEJD
  SAU_abdulaziz_al_saud:0 "Abdulaziz ibn Saud"
- SAU_Abdulaziz_desc: "After the destruction of the second Saudi state, the deposition of his father, exile in Kuwait, and the resurgence of the Saudi state, Abdulaziz has claimed the mantle of his ancestors to unite Nejd, and subsequently Arabia, from the grasp of the Ottomans and their allies."
+ SAU_Abdulaziz_desc: "После разрушения Второго Саудовского Государства, низложения своего отца, изгнания в Кувейт и возрождения Саудовского Государства, Абдул-Азиз взял на себя мантию своих предков, чтобы объединить Неджд, а затем и Аравию, вырвавшись из рук Османов и их союзников."
  SAU_muhammad_bin_abdul_rahman:0 "Muhammad bin Abdul-Rahman"
  SAU_zaidan_ibn_hithlain: "Zaydan Ibn Hithlain"
  SAU_saud_kabeer: "Saud Al Kabeer Al Saud"
