--- a/localisation/russian/ww1_parliament_gui_l_russian.yml
+++ b/localisation/russian/ww1_parliament_gui_l_russian.yml
@@ -29,7 +29,7 @@
   
   party_2_text:0 "§OНезависимые Социалисты§!"
   party_2_text_desc:0 "§LMostly composed of left-wing elected officials refusing to affiliate with the radicalism of the §RSFIO§!, the independent socialists are reformists, following the line of the §OPSF (French Socialist Party)§!.\n\nOpportunistic by nature, independents often change allegiances, navigating between discreet support for radicals and a more moderate Republican alliance.§!"
-  party_3_text:0 "§8Демократическо-Республиканский Альянс§!"
+  party_3_text:0 "§8Демократический Республиканский Альянс§!"
   party_3_text_desc:0 "§L§YThe Democratic Republican Alliance§! is a young party in 1901 founded by §YLéon Gambetta§! and §YRaymond Poincaré§!. It represents a broad coalition of liberals and moderates opposed to the radical activism of extreme parties.\n\nProgressive and advocating §Y“laissez-faire”§!, it is a liberal reformist party.§!"
   party_4_text:0 "§CПартия Радикальных Социалистов§!"
   party_4_text_desc:0 "§L§CThe Republican, radical and radical socialist liberal labor party§! advocating private property, social justice and secularism. Led in part by §YGeorges Clémenceau§!, the party in power between 1906 and 1909 issued major social reforms such as the creation of the Ministry of Labor and the establishment of Sunday rest.\n\nAs a pivotal party, it can count on important figures from the beginning of the century, such as §YCamille Pelletan§! (former minister of the navy) or §YEmile Combes§! (also former prime minister).§!"
