--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5020,7 +5020,7 @@ no_take_until_ROM.tt:0 "The §CKing§! will make a variety of suggestions for ou
 ww1_romania.9.a:0 "Lets see how they do!"
 ROM_ferd_king:0 "Ferdinand I is King of Romania"
 ww1_romania.8.t:0 "The Carol Mosque"
-ww1_romania.8.d:0 "While the muslims population in Romania is small, they do have prominence. As a sign of respect and solidarity with Romanian muslims, as well as a act of good will to the Ottoman Empire, King Carol today ordered construction to begin on a grand mosque in Constanța, one of our largest cities. While construction will be slow, the ambitious project will certainly increase tourism to our country once completed."
+ww1_romania.8.d:0 "While the muslims population in Romania is small, they do have prominence. As a sign of respect and solidarity with Romanian muslims, as well as a act of good will to the Ottoman Empire, King Carol today ordered construction to begin on a grand mosque in Constanta, one of our largest cities. While construction will be slow, the ambitious project will certainly increase tourism to our country once completed."
 ww1_romania.8.a:0 "We're an inclusive country!"
 ww1_romania.1.t:0 "The Puppet Master"
  ww1_romania.28.t:0 "The Outbreak of the Great War"
@@ -5398,7 +5398,7 @@ ROM_stir_anti_austrianism_desc:0 ""
 ROM_turn_west:0 "Turn West"
 ROM_turn_west_desc:0 ""
 ww1_romania.33.t:0 "Hundreds of thousands of Leu for Public Works Misplaced"
-ww1_romania.33.d:0 "It seems prime minister Carp is not beating the incompentent allegations, as news papers across Romania are reporting hundreds of thousands of Leu has been completly misplaced, with the funds likely being stolen by corrupt officals at the lower level. Carp already has a reputation amongst the King and the general public of being incompetent and arrogant, and this report certainly isn't helping. The PNL has blasted the conservative party for their incompetence, with some accusing PC officals of taking the cash themselves. "
+ww1_romania.33.d:0 "It seems prime minister Carp is not beating the incompentent allegations, as newspapers across Romania are reporting hundreds of thousands of Leu has been completly misplaced, with the funds likely being stolen by corrupt officals at the lower level. Carp already has a reputation amongst the King and the general public of being incompetent and arrogant, and this report certainly isn't helping. The PNL has blasted the conservative party for their incompetence, with some accusing PC officals of taking the cash themselves. "
 ww1_romania.33.a:0 "This is a total nothing burger!"
 ROM_minimum_wage_law:0 "Minimum Wage Law"
 ROM_pro_entente_protests:0 "Pro-Entente Protesters"
