--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4056,8 +4056,8 @@
  AUH_wunderwaffen:0 "« Wunderwaffen »"
  AUH_wunderwaffen_desc:0 "The lengthening of the conflict forces us to race for innovation. Our researchers are not lacking in ideas, particularly in aviation, tanks and high-frequency communication."
 
- AUH_polish_legion:0 "Polish Eastern Legion"
- AUH_polish_legion_desc:0 "In order to strengthen the front, we can initiate the gathering of an elite Polish volunteer legion."
+ AUH_polish_legion:0 "Polish Legions"
+ AUH_polish_legion_desc:0 "In order to strengthen the front, we can initiate the gathering of elite Polish volunteer legions."
 
  AUH_purification_of_the_empire:0 "Lieb' Vaterland Magst Ruhig Sein!"
  AUH_purification_of_the_empire_desc:0 "Despite decades of integration, the fierce opposition of certain populations of the empire shows us that cohabitation is not possible. We are forced to take drastic measures in order to ensure the survival of the empire. We are not monsters, we act for the good of our people."
