Tweak demand concessions

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1642,8 +1642,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  CHI_government_split_mission_tt:0 "The government of the Republic of China has fallen. §Y[ROOT.GetNameWithFlag]§! will be split into §Y[ANC.GetNameWithFlag]§! and §Y[ZHC.GetNameWithFlag]§!.\n\n"
  CHINESE_CORES_RULE_TOOLTIP:0 "It isn't possible to release China in the Warlord Era."
  QING_SPHERE_RULE_TOOLTIP:0 "Cannot be liberated since they belong to the legitimate ruling power of the Great Qing Empire"
- reunite_china:0 "China has been reunited"
- reunited_china:0 "Has reunited China"
+ reunited_china_glov:0 "§YChina§! has been reunited"
+ reunited_china:0 "Has reunited §YChina§!"
  is_chinese_warlord_tt:0 "Is §YChinese warlord§!"
  is_chinese_warlord_tt_NOT:0 "Is NOT §YChinese warlord§!"
  is_china_or_warlord_tt:0 "Is §YChina or warlord§!"
@@ -1829,6 +1829,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  national_protection_government:0 "National Protection Government has restored Chinese democracy"
  CHI_desicion_restore_xuantong:0 "End the Regency"
  QIN_claim_concessions:0 "Revoke Concessions from [FROM.Getname]"
+ concessions_war:0 "War of the Concessions in China"
+ concessions_war_peace_rejected:0 "War of the Concessions in China"
+ concessions_war_no_peace_tt:0 "The war escalates to §Yall-out war§!. §RCaution: no scripted peace.§!"
  CHI_decision_local_dictatorial_power:0 "Empower Dictatorial Authority"
  CHI_decision_local_dictatorial_power_desc:0 "[FROM.GetFascistLeader] shall be given with local dictatorial power. Glory to leader [FROM.GetFascistLeader]!"
  CHI_beiyang_triumvirate_dismantle:0 "Fate of Beiyang Triumvirate"
