--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -1642,7 +1642,7 @@
  CHI_government_split_mission_tt:0 "Китайское правительство падет. Китай будет заменен §YЯньхуэйской Кликой§!.\n\n"
  CHINESE_CORES_RULE_TOOLTIP:0 "Невозможно освободить Китай в Эпоху Военачальников."
  QING_SPHERE_RULE_TOOLTIP:0 "Не могут быть освобождены, так как подчиняются Великой Империи Цин"
- reunite_china:0 "Китай был объединен"
+ reunited_china_glov:0 "Китай был объединен"
  reunited_china:0 "Объединили Китай"
  is_chinese_warlord_tt:0 "Является §Yкитайским милитаристом§!"
  is_chinese_warlord_tt_NOT:0 "Не является §Yкитайским милитаристом§!"
