--- a/localisation/english/ww1_war_l_english.yml
+++ b/localisation/english/ww1_war_l_english.yml
@@ -48,6 +48,7 @@
  WAR_NAME_FRA_CHA:0 "Ouaddai War"
  WAR_TAKE_CLAIM_NAME_ITA_TUR:0 "Italo-Turkish War"
  CIVIL_WAR_NAME_MEX:0 "Mexican Revolution"
+ CIVIL_WAR_NAME_RUS:0 "Russian Civil War"
 
 # CHINESE CIVIL WARS
  WAR_NAME_CHI_QIN:0 "Xinhai Revolution"
