--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1040,7 +1040,7 @@
  STATE_1039: "Docmo"
  STATE_1040: "Illig"
  STATE_1041: "Taleh"
- STATE_1042: "Warsangali"
+ STATE_1042: "Maakhir"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
