--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8706,8 +8706,10 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  BRN_reclaim_lost_territories:0 "Reclaim [FROM.GetName]"
  BRN_core_north_borneo:0 "Core [FROM.GetName]"
 
+ SOM_join_ottomans:0 "Join [TUR.GetNameDef] in their war with [ENG.GetNameDef]"
+ somaliland_campaign:0 "Somaliland campaign"
  SOM_claim_somali_territories:0 "Reclaim [FROM.GetName]"
- SAU_demand_somali_annexation:0 "Demand Somali Annexation"
+ SAU_demand_somali_annexation:0 "Demand Somali Annexation of [FROM.GetName]"
  SAU_solidify_control_in_empty_quarter:0 "Appease Tribles in the Empty Quarter"
  SAU_solidify_control_in_empty_quarter_desc:0 "The Empty Quarter, Rub' al Khali Desert is the second largest sandy desert in the world. It is sparsely populated, with a small number of Bedouin tribal groups roaming the sands. We now need to ensure that they are loyal to our government and that the region is secured as our territory."
 
