--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8470,7 +8470,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_england.28.t: "The British Alliance"
  ww1_england.28.a: "Yes"
  ww1_england.28.b: "No"
- ww1_england.30.t: "The Dervish State"
+ ww1_england.30.t: "The Dervish War"
  ww1_england.30.d: "After failing to put down the revolts in British Somaliland, the Dervish have gotten in league with the Ottomans and have revolted against our rule."
  ww1_england.30.a: "It's our least valuable colony... who cares?"
  ww1_england.31.t: "Britain proposes an Imperial Federation"
