--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -669,7 +669,8 @@
  VICTORY_POINTS_937: "Taşlıca"
  VICTORY_POINTS_3879: "Tekirdağ"
  VICTORY_POINTS_13061: "Kırkkilise"
- VICTORY_POINTS_890:0 "Adapazarı"
+ VICTORY_POINTS_890: "Adapazarı"
+ VICTORY_POINTS_10921: "Laasqoray"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
