--- a/localisation/english/replace/replace_victory_points_l_english.yml
+++ b/localisation/english/replace/replace_victory_points_l_english.yml
@@ -162,3 +162,4 @@
  VICTORY_POINTS_11771:0 "Fengtian"
  VICTORY_POINTS_6813:0 "Maraş"
  VICTORY_POINTS_76203:0 "Malatya"
+ VICTORY_POINTS_10775:0 "Aussa"
