--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5245,7 +5245,7 @@ ww1_romania.46.d:0 "While traditionally rural Romania votes comfortably for the 
 ww1_romania.48.t:0 "PC accuses us of betraying Romanians in Moldova"
 ww1_romania.48.d:0 "The PC has been claiming as of late that we have plans to ally ourselves with France, and Russia by extent. They accuse us of abandoning our friends in Berlin in exchange for a nation currently oppressing our people. How should we respond?"
 ww1_romania.48.a:0 "Just focus on domestic policy, people won't pay attention to this"
-ww1_romania.48.b:0 "Play up the friendship with France, but ignore criticize Russia"
+ww1_romania.48.b:0 "Play up the friendship with France, but ignore Russia"
 ROM_pcd_government:0 "The government is lead by the §mPCD§!"
 ww1_romania.47.t:0 "PC Attacks us for our Protectionist Policies"
 ww1_romania.47.d:0 "The PC has been attacking us for our protectionist policies, claiming it's making food prices higher for everyone. Do we plan to double down on our position, or pivot?"
