Hungary-Slovak border

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1041,6 +1041,7 @@
  STATE_1040: "Illig"
  STATE_1041: "Taleh"
  STATE_1042: "Maakhir"
+ STATE_1043: "Šariš"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
