Sorry, was busy. I mean obviously hindsight is 20/20, but what’s weird now vs. 2020 is that in 2020 the prevailing (poll supported) narrative was that Biden would win back a lot of working class Obama-Trump voters. This is why polls had him up big in the rust belt and why Trump’s odds were seen as so much worse than they were. If he couldn’t keep his base in the face of overwhelming Democrat turnout he couldn’t win. Biden’s campaign was also oriented this way. Working Class Joe, Union Joe, Scranton Joe, etc.  But now that’s not the case. Polling suggests the wholesome WWC is gonna vote like it did in 2020. It could be underestimating them again and they’ll vote even more Republican, but I don’t think that’s likely because big shifts can only happen so many times and pollsters are trying not to get embarrassed by this again.  So polling in the rust belt makes a lot of sense to me. Kamala wins the Dem base, Trump wins the WWC, and moderates and independents that skew Kamala slightly moreso than they did Biden in 2020 are going to decide the election. TheAngryObserver — Today at 1:42 PM My opinion is we have no idea what mail in will look like. In 2022 though e-day turnout in PA was something like Oz+10. If Trump is around that number, I’m gonna feel pretty good about Harris winning. TheAngryObserver — Today at 1:46 PM Obviously we can’t just know polling errors, but I just don’t think there’s any fucking way AZ and GA polling is accurate. Do we really think these trends, which continued during the 2022 midterms, will just suddenly reverse for Trump of all people? Muh minority turnout at least kinda made sense when Joe was in the lead but now it’s Kamala. Do we really think she’ll do worse than George McGovern with black people? I don’t.  Polling in the whiter rust belt mostly makes sense to me. When you get to the heavily black and Latino states, it gets weird. Wisconsin polling has it super blue, and that state is even whiter than PA and MI IIRC.  If you were gonna p

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9323,7 +9323,8 @@ king_opinion_worse.tt:0 "The king's opinion of the current government will §Rwo
 ROM_kings_rotation_desc:0 "Romania's King prefers a 'rotation' between the 3 main parties of Romania, the §lPNL§!, the §mPCD§!, and the §cPC§!. As such, Romania's King generally loses confidence in the ruling government the longer it rules."
 the_great_communicator:0 "The Great Communicator"
  ROM_kings_country_category:0 "The Puppet Master"
-barbu_delavrancea:0 "Barbu Delavrancea"
+ROM_barbu_delavrancea:0 "Barbu Delavrancea"
+ROM_constantin_arion:0 "Constantin Arion"
 ROM_constantin_motru:0 "Constantin Montru"
 sociologist:0 "Sociologist"
  ROM_titu_maiorescu:0 "Titu Maiorescu"
