--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5090,6 +5090,8 @@
  TUR_governor_of_aleppo_desc:0 "Our appointment has brough a new era for the governance of Syria. Under our leadership, there won't be no disloyal rulers left in Syria. As Aleppo stands in between Syria and Anatolia, we have to place a loyal follower of Cemâl in command."
  TUR_governor_of_aleppo_tt:0 "An §Yevent chain§! will start for us to decide whether we'll change the §YGovernor of Aleppo§!, or keep §YBekir Sami Bey§! in his post."
  TUR_mobile_headquarters_tt:0 "Modify §YCemâl's Syria§! by\n£surrender_texticon  Surrender Limit: §G+5.00%§!\n\n"
+ TUR_bring_halide_edib_adivar_tt1:0 "Modify §YCemâl's Syria§! by\n£research_speed_texticon  Research Speed: §G+5.00%§!\n\n"
+ TUR_bring_halide_edib_adivar_tt2:0 "§YHalide Edib Hanım§!(@TUR) joins §Y[FROM.GetNameDef]§!\n"
  TUR_syrian_reforms:0 "Syrian Reforms"
  TUR_syrian_reforms_desc:0 "The main objective of Cemâl Paşa in the Syrian provinces is to reform and centralize these lands. As Cemâl Paşa will follow the path of centralization and integration of Syrian people and lands to the empire that was kickstarted with Tanzimat reforms, Syria will become an integral part of the empire."
  TUR_dealing_with_the_arabist_movement:0 "Dealing with the Arabist Movement"
