BUL_TUR event chain loc

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15065,66 +15065,113 @@ test_show_shall_coco_SSP:0 "[?SSP|Y] seats for Shall's party"
 
 #Bulgaria-Ottoman/Turkey Negotiations
 
-ww1_BUL_TUR.1.t: "Continue Negotiations With Bulgaria?"
-ww1_BUL_TUR.1.d: "We've been negotiating and establishing diplomatic ties with the newly independent Bulgarian state; we've made several breakthroughs, including recognizing Bulgarian independence and Ferdinand's title of Tsar, but the new Bulgarian prime minister, Ivan Geshov, would like to continue negotiations. Should Nasim Bey meet with Mr. Geshov?"
-ww1_BUL_TUR.1.a: "Yes, continue negotiations"
-ww1_BUL_TUR.1.b: "No, negotiations are unnecessary"
+l_english:
+ ww1_BUL_TUR.1.t: "Continuing Negotiations with Bulgaria?"
+ ww1_BUL_TUR.1.d: "Nasim Bey is awaiting instructions on whether to proceed with further negotiations with the Bulgarian government. What will be the course of action?"
+ ww1_BUL_TUR.1.a: "Yes"
+ ww1_BUL_TUR.1.b: "No"
+ 
+ ww1_BUL_TUR.2.t: "Concerns Shared by Nasim Bey: Conscription of Ottoman Citizens in Bulgarian Borders"
+ ww1_BUL_TUR.2.d: "Nasim Bey raises concerns regarding the conscription of Ottoman citizens who reside within Bulgarian borders. This could lead to diplomatic complications."
+ ww1_BUL_TUR.2.a: "He has a good point"
+ ww1_BUL_TUR.2.b: "Nope"
+ 
+ ww1_BUL_TUR.3.t: "Ottomans Agree to Resume Negotiations"
+ ww1_BUL_TUR.3.d: "The Ottomans have expressed their willingness to continue the discussions. This is a positive development for our diplomatic objectives."
+ ww1_BUL_TUR.3.a: "Great"
+ 
+ ww1_BUL_TUR.4.t: "Ottomans Reject Resuming Negotiations"
+ ww1_BUL_TUR.4.d: "The Ottoman delegation has refused to resume negotiations with Bulgaria. This will negatively affect the future of any peaceful settlements."
+ ww1_BUL_TUR.4.a: "Their loss"
+ 
+ ww1_BUL_TUR.5.t: "What to Discuss with Geshov"
+ ww1_BUL_TUR.5.d: "Nasim Bey seeks clarity on the issues to be discussed with Prime Minister Geshov. Should the topics include conscription, border conflicts, or perhaps the Mufti elections?"
+ ww1_BUL_TUR.5.a: "Conscription of Ottoman Citizens in Bulgaria"
+ ww1_BUL_TUR.5.b: "Concerns about Upcoming Mufti Elections"
+ ww1_BUL_TUR.5.c: "Cease Negotiations"
+ ww1_BUL_TUR.5.d: "We've made all our points"
+ ww1_BUL_TUR.5.e: "Border Conflicts"
 
-ww1_BUL_TUR.2.t: "Concerns Shared by Nasim Bey: Conscription of Ottoman Citizens in our Borders"
-ww1_BUL_TUR.2.d: "During Ivan Geshov's recent negotiations with Nasim Bey, he was alerted about Young Turks' concerns about Ottoman citizens being forcefully conscripted while in Bulgaria. How do we respond to this?"
-ww1_BUL_TUR.2.a: "He has a good point"
-ww1_BUL_TUR.2.b: "Nope"
+ ww1_BUL_TUR.6.t: "Conscription of Ottoman Citizens in Bulgaria"
+ ww1_BUL_TUR.6.d: "The Ottoman delegation finds the conscription of their citizens in Bulgaria to be unacceptable."
+ ww1_BUL_TUR.6.a: "This is unacceptable"
 
-ww1_BUL_TUR.3.t: "The Young Turk Administration Agrees to Continue Negotiations"
-ww1_BUL_TUR.3.d: "The new 'Young Turk' administration has agreed to continue negotiations, through Nasim Bey. Ivan Geshov eagarly awaits Bey's arrival to discuss the many problems that unfortunatly prevent harmony between us."
-ww1_BUL_TUR.3.a: "Exciting"
+ ww1_BUL_TUR.7.t: "Concerns About the Upcoming Bulgarian Mufti Elections"
+ ww1_BUL_TUR.7.d: "Nasim Bey has concerns regarding the upcoming Mufti elections in Bulgaria, particularly the potential influence of Mehmet Muhiddin Efendi."
+ ww1_BUL_TUR.7.a: "Express concerns about Mehmet Muhiddin Efendi"
 
-ww1_BUL_TUR.4.t: "The Young Turk Administration Rejects Negotiations"
-ww1_BUL_TUR.4.d: "Unfortunatly, the continuation of negotiations with the Young Turk administration will not be possible soon."
-ww1_BUL_TUR.4.a: "Their Loss"
+ ww1_BUL_TUR.8.t: "What Attitude Should Nasim Bey Have?"
+ ww1_BUL_TUR.8.d: "The Ottoman delegation must decide whether Nasim Bey should adopt a sympathetic, neutral, or strict stance during the ongoing negotiations with Bulgaria."
+ ww1_BUL_TUR.8.a: "Sympathetic"
+ ww1_BUL_TUR.8.b: "Neutral"
+ ww1_BUL_TUR.8.c: "Strict"
 
-ww1_BUL_TUR.5.t: "What to Discuss with Geshov?"
-ww1_BUL_TUR.5.d: "What issue is would we like to bring to Ivan Geshov's attention?"
-ww1_BUL_TUR.5.a: "Conscription of Ottoman Citizens in Bulgaria"
-ww1_BUL_TUR.5.b: "Concerns about upcoming Bulgarian Mufti Elections"
-ww1_BUL_TUR.5.c: "Border Banditry:
-ww1_BUL_TUR.5.d: "Border Refugee Problem"
-ww1_BUL_TUR.5.e: "Cease Negotiations"
-ww1_BUL_TUR.5.f: "We've Made All Our Points"
-ww1_BUL_TUR.5.g: "Border Conflicts"
+ ww1_BUL_TUR.9.t: "Nasim Bey Has a Sympathetic Attitude"
+ ww1_BUL_TUR.9.d: "Nasim Bey is displaying a sympathetic attitude during the negotiations, signaling a willingness to compromise."
+ ww1_BUL_TUR.9.a: "Interesting"
 
-ww1_BUL_TUR.6.t: "Coscription of Our Citizens in Bulgaria"
-ww1_BUL_TUR.6.d: "Since Bulgaria's independence was only in 1908 and up until was still our subject, many legally Ottoman citizens have been forcefully conscripted into the quickly expanding Bulgarian armed forces."
-ww1_BUL_TUR.6.a: "This is indeed unnacceptable"
+ ww1_BUL_TUR.10.t: "Border Conflicts"
+ ww1_BUL_TUR.10.d: "Nasim Bey has brought up the issue of border conflicts between Bulgaria and the Ottoman Empire. How should he approach this matter?"
+ ww1_BUL_TUR.10.a: "Antagonize Bulgaria"
+ ww1_BUL_TUR.10.b: "Act Neutrally"
 
-ww1_BUL_TUR.7.t: "Concerns about upcoming Bulgarian Mufti Elections"
-ww1_BUL_TUR.7.d: "We have a very valid concern that if Hocazade Mehmet Muhiddin Efendi wins the Bulgarian Grand Mufti Elections this December, that all muslims residing in Bulgaria would lose all their rights and assimilated into Eeastern Orthodox Christians, loyal to the Tsar."
-ww1_BUL_TUR.7.a: "Express our Concerns"
+ ww1_BUL_TUR.11.t: "Bulgaria Agrees"
+ ww1_BUL_TUR.11.d: "Bulgaria has agreed to the Ottoman proposals. This is a significant step towards easing tensions."
+ ww1_BUL_TUR.11.a: "Great"
 
-ww1_BUL_TUR.8.t: "Border Banditry"
-ww1_BUL_TUR.8.d: "Our Balkan borders, and territories are in pure chaos, even in the territories closest to the Sublime Porte. Along our border with Bulgaria, banditry has become far too common—on both sides of the border, mind you. Banditry is not only wrong and illegal, but it's also terrible for business."
-ww1_BUL_TUR.8.a: "We must Crush them!"
+ ww1_BUL_TUR.12.t: "Bulgaria Disagrees"
+ ww1_BUL_TUR.12.d: "Bulgaria has rejected the Ottoman terms, straining the negotiations further."
+ ww1_BUL_TUR.12.a: "Move on"
+ ww1_BUL_TUR.12.b: "Cease negotiations"
 
-ww1_BUL_TUR.9.t: "Border Refugee Problem"
-ww1_BUL_TUR.9.d: "Our Balkan borders and territories are in pure chaos, even in the territories closest to the Sublime Porte. Along our border with Bulgaria, particularly in Thrace, illegal immigration and abandonment of villages due to banditry and border tensions have only enriched the bandit haven, a staggering decline in business, and with the lack of civilians, the border will become more militarized and tense, which is exactly what we do not need."
-ww1_BUL_TUR.9.a: "We should invest into the area to attract more citizens"
-ww1_BUL_TUR.9.b: "they will have to stay, if they must be convinced by bayonet point"
+ ww1_BUL_TUR.13.t: "Negotiations Fall Through"
+ ww1_BUL_TUR.13.d: "The negotiations between Bulgaria and the Ottoman Empire have completely collapsed. This will undoubtedly escalate tensions."
+ ww1_BUL_TUR.13.a: "Their loss"
 
-ww1_BUL_TUR.10.t: "Border Conflicts"
-ww1_BUl_TUR.10.d: "Our border with Bulgaria is quite tense, as both sides aren't blind to the brewing storm over the balkans we've both armed our borders in a defensive and possibly an invasive manner. While no armed battles have occured, YET, there has been verbal skirmishes."
-ww1_BUL_TUR.10.a: "Yes, this must be solved"
+ ww1_BUL_TUR.14.t: "Concerns Shared by Nasim Bey: Upcoming Mufti Elections"
+ ww1_BUL_TUR.14.d: "Nasim Bey raises concerns about the upcoming Mufti elections in Bulgaria, emphasizing the importance of selecting a candidate that aligns with Ottoman interests."
+ ww1_BUL_TUR.14.a: "We will keep this in mind"
 
-ww1_BUL_TUR.11.t: "Bulgaria Agrees"
-ww1_BUL_TUR.11.d: "Regarding the latest issue discussed, Nasim Bey and Ivan Geshov have reached an agreement."
-ww1_BUL_TUR.11.a: "Great"
+ ww1_BUL_TUR.15.t: "Nasim Bey Would Like to Move On"
+ ww1_BUL_TUR.15.d: "After a disagreement, Nasim Bey suggests moving on to other matters to keep the negotiations on track."
+ ww1_BUL_TUR.15.a: "Sure"
+ ww1_BUL_TUR.15.b: "Nope, cease negotiations"
 
-ww1_BUL_TUR.12.t: "Bulgaria Disagrees"
-ww1_BUL_TUR.12.d: "Regarding the latest issue discussed, Nasim Bey and Ivan Geshov have failed to find common grounds."
-ww1_BUL_TUR.12.a: "Back Down"
-ww1_BUL_TUR.12.b: "Cease Negotiations"
+ ww1_BUL_TUR.16.t: "Nasim Bey is Neutral"
+ ww1_BUL_TUR.16.d: "Nasim Bey has adopted a neutral attitude during the discussions, showing neither strong support nor opposition to Bulgaria's demands."
+ ww1_BUL_TUR.16.a: "Well"
 
-ww1_BUL_TUR.13.t: "Negotiations Fall Through"
-ww1_BUl_TUR.13.d: "Our negotiations with the Young Turks have come to a dead end, it's become apparent we have conflicting ideas, and we've been unable to reach a middle ground, so the diplomats have returned to their respective homes."
-ww1_BUL_TUR.13.a: "Their Loss"
+ ww1_BUL_TUR.17.t: "Nasim Bey is Strict"
+ ww1_BUL_TUR.17.d: "Nasim Bey has taken a strict stance, making the negotiations more difficult for Bulgaria to navigate."
+ ww1_BUL_TUR.17.a: "This is hindering negotiations"
+
+ ww1_BUL_TUR.18.t: "Nasim Bey Antagonizes Us in Regards to Border Conflicts"
+ ww1_BUL_TUR.18.d: "Nasim Bey has taken an aggressive stance in the discussions on border conflicts, pushing Bulgaria into a corner."
+ ww1_BUL_TUR.18.a: "Mobilize the Army"
+ ww1_BUL_TUR.18.b: "De-escalate the situation"
+
+ ww1_BUL_TUR.19.t: "Cease Negotiations"
+ ww1_BUL_TUR.19.d: "The negotiations have come to an end. Both sides leave the table with unresolved tensions."
+ ww1_BUL_TUR.19.a: "Understood"
+ 
+ ww1_BUL_TUR.20.t: "De-escalation Agreed"
+ ww1_BUL_TUR.20.d: "Both sides have agreed to de-escalate the situation, preventing further military build-up along the border."
+ ww1_BUL_TUR.20.a: "A relief"
+
+ ww1_BUL_TUR.21.t: "Border Conflict"
+ ww1_BUL_TUR.21.d: "Nasim Bey raises the ongoing border conflict with Bulgaria, requesting a response from Geshov."
+ ww1_BUL_TUR.21.a: "Push for an Autonomous Macedonia"
+
+ ww1_BUL_TUR.22.t: "Nasim Bey Agrees to De-escalate"
+ ww1_BUL_TUR.22.d: "After much deliberation, Nasim Bey has agreed to de-escalate the situation along the Bulgarian-Ottoman border."
+ ww1_BUL_TUR.22.a: "That's the wise choice"
+ ww1_BUL_TUR.22.b: "Their attitude has made a distasteful situation"
+
+ ww1_BUL_TUR.24.t: "The Ottomans Mobilize in Return"
+ ww1_BUL_TUR.24.d: "The Ottoman Empire has decided to mobilize its forces along the Bulgarian border, raising tensions significantly."
+ ww1_BUL_TUR.24.a: "A dangerous situation"
+ ww1_BUL_TUR.24.b: "Backdown"
+
+
 
  
