--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -1586,15 +1586,15 @@
  DJI:0 "Джибути"
  DJI_DEF:0 "Джибути"
  DJI_ADJ:0 "Джибутийск"
- SOM_fascism:1 "Аджуранская Империя"
- SOM_fascism_DEF:1 "Аджуранская Империя"
+ SOM_fascism:1 "Движение Дервишей"
+ SOM_fascism_DEF:1 "Движение Дервишей"
  SOM_democratic:0 "Сомали"
  SOM_democratic_DEF:0 "Сомали"
- SOM_neutrality:0 "Государство Дервишей"
- SOM_neutrality_DEF:0 "Государство Дервишей"
+ SOM_neutrality:0 "Движение Дервишей"
+ SOM_neutrality_DEF:0 "Движение Дервишей"
  SOM_communism:1 "Сомалийская Демократическая Республика"
  SOM_communism_DEF:1 "Сомалийская Демократическая Республика"
- SOM_fascism_ADJ:1 "Аджуранск"
+ SOM_fascism_ADJ:1 "Дервишск"
  SOM_democratic_ADJ:0 "Сомалийск"
  SOM_neutrality_ADJ:0 "Дервишск"
  SOM_communism_ADJ:0 "Сомалийск"
@@ -3202,6 +3202,18 @@
  ALS_communism_DEF:1 "Эльзас-Лотарингская Советская Республика"
  ALS_GER_democratic_subject_DEF:0 "Имперская Земля Эльзас-Лотарингия"
  ALS_GER_neutrality_subject_DEF:0 "Имперская Земля Эльзас-Лотарингия"
+ 
+ AFA:0 "Афар"
+ AFA_DEF:0 "Афар"
+ AFA_ADJ:0 "Афарск"
+ AFA_fascism:0 "Имамат Аусса"
+ AFA_fascism_DEF:0 "Имамат Аусса"
+ AFA_democratic:0 "Афарская Республика"
+ AFA_democratic_DEF:0 "Афарская Республика"
+ AFA_communism:0 "Революционно-Демократический Союз Афара"
+ AFA_communism_DEF:0 "Революционно-Демократический Союз Афара"
+ AFA_neutrality:0 "Султанат Аусса"
+ AFA_neutrality_DEF:1 "Султанат Аусса"
  
  ### Debug Tag ###
  XXA:0 "Debug Tag"
