--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -1519,7 +1519,7 @@
  ZIM_communism_party:0 "Лейбористская Партия"
  ZIM_communism_party_long:0 "Лейбористская Партия Родезии"
  ZIM_neutrality_party:0 "Дом Хумало"
- ZIM_governorship_party:0 "Генеральное Губернаторство"
+ ZIM_governorship_party:0 "Исполнительный Совет"
  
  ISR_democratic_party:0 "ВСО"
  ISR_democratic_party_long:0 "Всемирная Сионистская Организация"
@@ -1530,7 +1530,8 @@
  #Fascist party is 0% fictional.
  ISR_fascism_party:0 "Бетар"
  
- SOM_neutrality_party:0 "Халганкии Дараавиишта"
+ SOM_neutrality_party:0 "Борьба Дервишей"
+ SOM_fascism_party:0 "Борьба Дервишей"
  
  RGS_democratic_party:0 "Федералистская Партия"    
  RGS_democratic_party_long:0 "Федералистская Партия Рио-Гранде-ду-Сул"
@@ -1543,7 +1544,7 @@
  SHL_democratic_party:0 "ШГКСРД"
  SHL_democratic_party_long:0 "Шлезвиг-Гольштейнская Крестьянская и Сельскохозяйственная Рабочая Демократия"
  SHL_fascism_party:0 "ГПШГ"
- SHL_fascism_party_long:0 "Государственная Партия Шлезвиг-Гольштейн"
+ SHL_fascism_party_long:0 "Государственная Партия Шлезвиг-Гольштейна"
  
  KUW_neutrality_party:0 "Дом Аль Сабах"
  KUW_democratic_party:0 "Меджлис аль-Шура"
@@ -1939,3 +1940,5 @@
  SMR_democratic_party:0 "Генеральный Совет Сан-Марино"
  SMR_communism_party:0 "СПСМ"
  SMR_communism_party_long:0 "Социалистическая Партия Сан-Марино"
+ 
+ AFA_neutrality_party:0 "Династия Мудайто"
