--- a/localisation/russian/state_names_l_russian.yml
+++ b/localisation/russian/state_names_l_russian.yml
@@ -1040,7 +1040,8 @@
  STATE_1039: "Докмо"
  STATE_1040: "Иллиг"
  STATE_1041: "Талех"
- STATE_1042: "Варсангали"
+ STATE_1042: "Маахир"
+ STATE_1043: "Шариш"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
