--- a/localisation/russian/ww1_characters_l_russian.yml
+++ b/localisation/russian/ww1_characters_l_russian.yml
@@ -4027,6 +4027,10 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  #San Marino
  SMR_grand_and_general_council:0 "Grand And General Council"
  
+ #Aussa
+ AFA_yayyo_mohamed:0 "Yayyo Macammad"
+ AFA_mohamed_yayyo:0 "Macammad Yayyo"
+ 
  
  
  
