--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -344,7 +344,7 @@
  GER_add_submarines:0 "Заложить U-Boots"
  GER_add_submarines_desc:0 "Это решение доступно только в §Yлегчайшей сложности§! или §Yрежиме отладки§!."
  before_the_leaves_fall:0 "Пока не опали листья"
- before_the_leaves_fall_desc:0 "«Ты вернешься домой еще до того, как с деревьев опадут листья.»\nНо если это окажется ложью, значит, мы вынудили и обманули молодое поколение попасть в ад на земле. Кто несет за это ответственность?"
+ before_the_leaves_fall_desc:0 "«Ты вернешься домой еще до того, как с деревьев опадут листья.»\nНо если это окажется ложью, значит, мы обманули и вынудили молодое поколение попасть в ад на земле. Кто несет за это ответственность?"
  before_the_leaves_fall_flag:0 "Великая война закончилась менее чем за несколько недель"
  before_the_leaves_fall_failed:0 "Вторая франко-германская война переросла в Великую войну"
  
@@ -1642,8 +1642,8 @@
  CHI_government_split_mission_tt:0 "Китайское правительство падет. Китай будет заменен §YЯньхуэйской Кликой§!.\n\n"
  CHINESE_CORES_RULE_TOOLTIP:0 "Невозможно освободить Китай в Эпоху Военачальников."
  QING_SPHERE_RULE_TOOLTIP:0 "Не могут быть освобождены, так как подчиняются Великой Империи Цин"
- reunited_china_glov:0 "Китай был объединен"
- reunited_china:0 "Объединили Китай"
+ reunited_china_glov:0 "§YКитай§! был объединен"
+ reunited_china:0 "Объединили §YКитай§!"
  is_chinese_warlord_tt:0 "Является §Yкитайским милитаристом§!"
  is_chinese_warlord_tt_NOT:0 "Не является §Yкитайским милитаристом§!"
  is_china_or_warlord_tt:0 "Является §YКитаем или милитаристом§!"
@@ -1782,9 +1782,9 @@
  ready_to_unite_china:0 "Выполнил соответствующий фокус по объединению Китая"
  CHI_reunite_china:0 "Воссоединение Китая"
  CHI_reunite_china_dec:0 "Эпохи военачальников больше нет. Китай снова един!"
- CHI_reunite_china_tt:0 "Северный Китай, Центральный Китай, Восточный Китай и Южный Китай принадлежат и контролируются §Y[ROOT.GetNameWithFlag]§! или §Yего субъектом§!."
- CHI_reunite_china_effect_tt:0 "Все китайские земли, принадлежащие §Y[ROOT.GetNameWithFlag]§! или §Yего субъекту§! будут §Yинтегрированы и станут национальными§!."
- CHI_form_china_effect_tt:0 "Все китайские земли, принадлежащие §Y[ROOT.GetNameWithFlag]§! или §Yего субъекту§! будут §Yинтегрированы и станут национальными§!, а также §Y[ROOT.GetNameWithFlag]§! переименуется в §Y[CHI.GetNonIdeologyName]§!."
+ CHI_reunite_china_tt:0 "Северный Китай, Центральный Китай, Восточный Китай и Южный Китай принадлежат и контролируются государством §Y[ROOT.GetNameWithFlag]§! или §Yего субъектом§!."
+ CHI_reunite_china_effect_tt:0 "Все китайские земли, принадлежащие государству §Y[ROOT.GetNameWithFlag]§! или §Yего субъекту§! будут §Yинтегрированы и станут национальными§!."
+ CHI_form_china_effect_tt:0 "Все китайские земли, принадлежащие государству §Y[ROOT.GetNameWithFlag]§! или §Yего субъекту§! будут §Yинтегрированы и станут национальными§!, а также §Y[ROOT.GetNameWithFlag]§! переименуется в §Y[CHI.GetNonIdeologyName]§!."
  clear_warlord_cores_and_claims_tt:0 "§YВсе национальные территории и претензии несуществующих китайских клик§! будут удалены с карты.\n"
  CHI_FNG_declare_government:0 "Правительство Фэнтяня"
  CHI_FNG_declare_government_desc:0 "На самом деле, мы - настоящее легитимное правительство. Говорю вам!"
@@ -1829,6 +1829,9 @@
  national_protection_government:0 "Правительство национальной защиты восстановило китайскую демократию"
  CHI_desicion_restore_xuantong:0 "Покончить с регентством"
  QIN_claim_concessions:0 "Отозвать концессии у государства [FROM.Getname]"
+ concessions_war:0 "Война за концессии в Китае"
+ concessions_war_peace_rejected:0 "Война за концессии в Китае"
+ concessions_war_no_peace_tt:0 "Война перерастает в §Yтотальную§!. §RПредупреждение: нет скриптового мира.§!"
  CHI_decision_local_dictatorial_power:0 "Наделить диктаторской властью"
  CHI_decision_local_dictatorial_power_desc:0 "[FROM.GetFascistLeader] должен быть наделен местной диктаторской властью. Славься, [FROM.GetFascistLeader]!"
  CHI_beiyang_triumvirate_dismantle:0 "Судьба Бэйянского триумвирата"
@@ -8703,8 +8706,10 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  BRN_reclaim_lost_territories:0 "Вернуть [FROM.GetName]"
  BRN_core_north_borneo:0 "Национализировать [FROM.GetName]"
 
+ SOM_join_ottomans:0 "Присоединиться к государству [TUR.GetNameDef] в войне с Британией"
+ somaliland_campaign:0 "Кампания в Сомалиленде"
  SOM_claim_somali_territories:0 "Вернуть [FROM.GetName]"
- SAU_demand_somali_annexation:0 "Потребовать аннексии Сомали"
+ SAU_demand_somali_annexation:0 "Потребовать аннексии Сомали у государства [FROM.GetName]"
  SAU_solidify_control_in_empty_quarter:0 " Умиротворение племен в Пустой Четверти"
  SAU_solidify_control_in_empty_quarter_desc:0 "Пустая Четверть, пустыня Руб-эль-Хали - вторая по величине песчаная пустыня в мире. Она малонаселенная, в песках кочует небольшое количество бедуинских племен. Теперь нам нужно убедиться, что они лояльны нашему правительству и что регион является нашей территорией."
 
@@ -8826,8 +8831,8 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  FRA_guesdists_get_soreleans:0 "Привлечь сорельянцев"
  FRA_guesdists_support_blanquism:0 "Поддержать бланкизм"
  FRA_allemanists_gather_support:0 "Получить поддержку Аллеманистов"
- FRA_allemanists_cooperate_with_independant_socialists:0 "Сотрудничать с независимыми социалистами"
- FRA_allemanists_sponsor_radical_socialist_union:0 "Спонсировать Радикально-социалистический союз"
+ FRA_allemanists_cooperate_with_independant_socialists:0 "Сотрудничать с Независимыми Социалистами"
+ FRA_allemanists_sponsor_radical_socialist_union:0 "Спонсировать Радикально-Социалистический Союз"
 
  FRA_volta_bani_war:0 "Восстание в Вольта-Бани"
  FRA_volta_bani_war_desc:0 "Французская Западная Африка охвачена серией антиколониальных восстаний коренных африканских народов."
