--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -10540,7 +10540,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_morocco.5.d:0 "Попытка отправить войска для установления протектората со стороны Франции оказалась неудачной. Марокко оказало военное сопротивление европейской жандармерии, спровоцировав кризис в регионе. Султан был свергнут, новое правительство не признает европейского влияния в стране.\n\nФранция готовится к военной интервенции."
  ww1_morocco.5.a:0 "Это спровоцирует кризис."
  ww1_morocco.6.t:0 "Немецкие канонерские лодки достигли Марокко"
- ww1_morocco.6.d:0 "В начале этой недели Германская империя направила в порт Агадир канонерскую лодку SMS Panther под предлогом защиты торговых интересов Германии после нашей собственной интервенции в Марокко. Через несколько дней на смену канонерке пришел более крупный крейсер класса «Бремен» SMS Berlin - наш министр иностранных дел заверил немецких дипломатов, и мы можем лишь предположить, что вскоре кайзер придет к нам с требованиями."
+ ww1_morocco.6.d:0 "В начале этой недели Германская Империя направила в порт Агадир канонерскую лодку SMS «Panther» под предлогом защиты торговых интересов Германии после нашей собственной интервенции в Марокко. Через несколько дней на смену канонерке пришел более крупный крейсер класса «Бремен» SMS «Berlin» - наш министр иностранных дел заверил немецких дипломатов, и мы можем лишь предположить, что вскоре кайзер придет к нам с требованиями."
  ww1_morocco.6.a:0 "Будем надеяться, что они не попросят слишком много..."
 
  ww1_morocco.9.t:0 "Германия требует Агадир"
