--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1018,7 +1018,7 @@
  STATE_1017: "Yozgat"
  STATE_1018: "Çatalca"
  STATE_1019: "İzmit"
- STATE_1020: "Maubegue-Givet"
+ STATE_1020: "Maubeuge-Givet"
  STATE_1021: "Acre"
  STATE_1022: "Bitlis"
  STATE_1023: "Deir ez-Zor"
